--- a/package.json
+++ b/package.json
@@ -3,8 +3,11 @@
     "description": "test build",
     "version": "0.0.1",
     "devDependencies": {
-        "ct-mapapps-gulp-js": "^0.3.6",
+        "@types/arcgis-js-api": "4.17.0",
+        "ct-mapapps-gulp-js": "^0.5.6",
         "vue-template-compiler": "2.6.6",
-        "@types/arcgis-js-api": "4.13.0"
+        "puppeteer": "^5.5.0",
+        "eslint-config-ct-prodeng": "^1.1.16",
+        "stylelint-config-ct-prodeng": "1.0.3"
     }
 }
