Add missing productName to manifest

--- a/src/main/js/bundles/dn_popupstypes/manifest.json
+++ b/src/main/js/bundles/dn_popupstypes/manifest.json
@@ -4,6 +4,7 @@
     "title": "${bundleName}",
     "description": "${bundleDescription}",
     "vendor": "con terra GmbH",
+    "productName": "devnet-mapapps-popups-types",
     "keywords": [
         "popups"
     ],
