--- a/src/main/js/bundles/dn_popupstypes/manifest.json
+++ b/src/main/js/bundles/dn_popupstypes/manifest.json
@@ -1,6 +1,6 @@
 {
     "name": "dn_popupstypes",
-    "version": "1.1.2-SNAPSHOT",
+    "version": "1.2.0",
     "title": "${bundleName}",
     "description": "${bundleDescription}",
     "vendor": "con terra GmbH",
