Update bundle imports for 4.20.

--- a/src/main/js/bundles/dn_popupstypes/manifest.json
+++ b/src/main/js/bundles/dn_popupstypes/manifest.json
@@ -8,8 +8,12 @@
     "keywords": [
         "popups"
     ],
+    "i18n": [
+        "bundle"
+    ],
+    "main": "",
     "dependencies": {
-        "popups": "^4.4.0"
+        "popups": "^4.20.0"
     },
     "components": [
         {
